infrastructure/aws/terraform/security_groups.tf
resource "aws_security_group" "webapp"{
  name = "application"
  vpc_id = module.networking.vpc_id
  tags = {
    Name = "application security group"
  }

  ingress {
    to_port = 22
    from_port = 22
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    to_port = 80
    from_port = 80
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    to_port = 443
    from_port = 443
    protocol = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    from_port = 8080
    protocol = "tcp"
    to_port = 8080
    cidr_blocks = ["0.0.0.0/0"]
  }
}


resource "aws_security_group" "database"{
  name = "database"
  vpc_id = module.networking.vpc_id
  tags = {
    Name = "database security group"
  }
  #Mysql
  ingress {
    to_port = 3306
    from_port = 3306
    protocol = "tcp"
    security_groups = [aws_security_group.webapp.id]
  }
}
